# rur-cpp

./: .gitignore  CANONICALIZATION_IMPLEMENTATION_GUIDE.md  CMakeLists.txt  CMakeLists.txt.backup  COMPREHENSIVE_IMPLEMENTATION_PLAN.md  CRT_FAILURE_ROOT_CAUSE_ANALYSIS.md  EXPERT_REVIEW_AND_RECOMMENDATIONS.md  F4_BUG_ANALYSIS.md  F4_BUG_COMPREHENSIVE_ANALYSIS.md  F4_BUG_FINAL_ANALYSIS.md  F4_BUG_REPORT.md  F4_BUG_SUMMARY_AND_WORKAROUND.md  F4_DEBUG_SUMMARY.md  F4_INFINITE_LOOP_BUG_REPORT.md  F4_ISSUE_REPORT.md  F4_MINIMAL_TEST_CASE.c  HEAP_OVERFLOW_FIX_SUMMARY.md  JULIA_RUR_ALGORITHM.md  MODERN_TESTING_SUMMARY.md  Makefile.test  NON_RADICAL_IDEALS_EXPLANATION.md  README.md  RUR_IMPLEMENTATION_STATUS.md  SEPARATING_ELEMENT_OPTIMIZATION.md  SQUARE_FREE_INSIGHT.md  analyze_expected_coefficients.py  canonicalize_rur_permutation_impl.cpp  check_quadratic_residue  current_status.md  debug_coefficient_ordering.cpp  debug_minimal_poly_consistency.cpp  debug_rur.cpp  debug_show_inconsistency.cpp  f4_bug_fix.patch  f4_infinite_loop_fix.patch  machinec.c  print_katsura4_system  print_katsura4_system.cpp  run_nonlinear_tests.sh  run_tests.sh  (+52 more)
.claude/agents/: f4-debugging-expert.md
archive/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_REVISED.md  TECHNICAL_TODO.md
axf4/: Makefile  axf4  axf4.c  make.bat  makegw.bat
demo/: demo_rur.cpp
docs/: API_GUIDE.md  DEV_NOTES.md  FLINT_ARB_UPGRADE_GUIDE.md
examples/: circle_line.cpp  cyclic3.cpp  input_format.md  integrate_with_solver.cpp
src/: axf4_lib.c  axf4_lib_fixed.c  axf4_wrapper.c  axf4_wrapper.h  bivariate_lex.cpp  bivariate_lex.hpp  direct_rur_solver.cpp  direct_rur_solver.hpp  f4_solver.cpp  f4_solver.hpp  flint_linear_algebra.cpp  flint_linear_algebra.hpp  flint_linear_solver.cpp  flint_linear_solver.hpp  flint_mpoly_wrappers.cpp  flint_mpoly_wrappers.hpp  flint_reducer.cpp  flint_reducer.hpp  flint_reducer_v2.cpp  flint_reducer_v2.hpp  flint_rur_solver.cpp  flint_rur_solver.hpp  flint_wrappers.hpp  monomial.cpp  monomial.hpp  polynomial.cpp  polynomial.hpp  polynomial_basis.cpp  polynomial_basis.hpp  quotient_ring.cpp  quotient_ring.hpp  rur_solver.cpp  rur_solver.hpp
src/julia_rur/: bivariate_algorithm.cpp  bivariate_algorithm.hpp  data_structures.cpp  data_structures.hpp  dimension_detection_fix.cpp  f4_integration.cpp  f4_integration.hpp  f4_monomial_decoder.cpp  f4_monomial_decoder.hpp  f4_polynomial_formatter.cpp  f4_polynomial_formatter.hpp  f4_session.hpp  hyperplane_sections.cpp  hyperplane_sections.hpp  multi_modular.cpp  multi_modular.hpp  multiplication_tables.cpp  multiplication_tables.hpp  numerical_roots_eigen.cpp  numerical_roots_eigen.hpp  numerical_roots_flint.cpp  numerical_roots_flint.hpp  numerical_roots_flint_stub.cpp  polynomial_evaluator.cpp  polynomial_evaluator.hpp  polynomial_expander.cpp  polynomial_expander.hpp  polynomial_operations.hpp  polynomial_solver.cpp  polynomial_solver.hpp  polynomial_solver_enhanced.cpp  polynomial_solver_enhanced.hpp  prime_utils.cpp  prime_utils.hpp  quotient_basis.cpp  quotient_basis.hpp  rur_main_algorithm.cpp  rur_main_algorithm.hpp  separating_element_enhanced.cpp  separating_element_optimization.cpp  (+6 more)
test/: analyze_prime_1073741827.cpp  check_primes.cpp  check_quadratic_residue.cpp  run_tests.cpp  test_basic.cpp  test_benchmark_systems.cpp  test_biv_lex_bug.cpp  test_bivariate_algorithm.cpp  test_bivariate_debug.cpp  test_cas_examples.cpp  test_check_gb.cpp  test_circle_line_fix.cpp  test_circle_parabola_debug.cpp  test_complete_x2_trace.cpp  test_comprehensive.cpp  test_crt_reconstruction_debug.cpp  test_cubic_debug.cpp  test_cubic_rur_debug.cpp  test_cyclic4_zerodim.cpp  test_debug_f4_output.cpp  test_debug_gb.cpp  test_debug_rational_coeff.cpp  test_debug_reconstruction.cpp  test_direct_rur.cpp  test_eigen_cubic.cpp  test_eigen_poly.cpp  test_eigen_roots_debug.cpp  test_f4_crash_debug  test_f4_crash_debug.cpp  test_f4_crash_debug_fixed  test_f4_debug_structured.cpp  test_f4_direct.cpp  test_f4_format_debug.cpp  test_f4_gb_consistency.cpp  test_f4_gb_consistency_simple.cpp  test_f4_internal.cpp  test_f4_multiplication_tables.cpp  test_f4_multivariate.cpp  test_f4_negative_parsing.cpp  test_f4_parsing.cpp  (+89 more)
test/gtest/: TESTING_TEMPLATE.md  test_basic_operations.cpp  test_benchmark_systems.cpp  test_integration.cpp  test_linear_systems.cpp  test_main.cpp  test_nonlinear_systems.cpp  test_numerical_roots.cpp  test_positive_dimensional.cpp  test_underdetermined_systems.cpp  test_univariate_systems.cpp
test/gtest/examples/: migrated_simple_quadratic.cpp
test/gtest/include/: test_helpers.hpp
